actually corrected spacing

--- a/src/blocks/WeddingParty.css
+++ b/src/blocks/WeddingParty.css
@@ -12,7 +12,7 @@
 
 .wedding-party-person--main {
     box-shadow: 0px 0px 3px 0px #436191;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
 }
 .wedding-party-person--main .wedding-party__img {
     width: 50vw;
@@ -91,11 +91,11 @@
 }
 
 .wedding-party-column:nth-child(2) {
-    margin-right: 7px;
+    margin-right: 15px;
 }
 
 .wedding-party-column:nth-child(4) {
-    margin-left: 7px;
+    margin-left: 15px;
 }
 
 .wedding-party__img-shadow--dark {
@@ -125,10 +125,6 @@
     .wedding-party-column {
         width: 100%;
         margin-bottom: 30px;
-    }
-
-    .wedding-party-person--main {
-        margin-bottom:  30px;
     }
 
     .wedding-party__description {
